--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -51,6 +51,7 @@ typed-builder = "0.18.1"
 ulid = { version = "1.1.2", features = ["serde"] }
 
 [dev-dependencies]
+insta = { version = "1.35.1", features = ["toml", "redactions"] }
 rstest = "0.18.2"
 similar-asserts = { workspace = true }
 
