--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -46,7 +46,7 @@ strum = { version = "0.26.1", features = ["derive"] }
 strum_macros = "0.26.1"
 thiserror = "1.0.57"
 toml = { version = "0.8.10", features = ["indexmap", "preserve_order"] }
-tracing = { version = "0.1.40", features = ["log"] }
+tracing = { version = "0.1.40" }
 typed-builder = "0.18.1"
 ulid = { version = "1.1.2", features = ["serde"] }
 
