--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -34,7 +34,6 @@ displaydoc = "0.2.4"
 enum_dispatch = "0.3.12"
 getset = "0.1.2"
 itertools = "0.12.1"
-log = "0.4.21"
 merge = "0.1.0"
 miette = { version = "7.1.0", features = ["fancy"] }
 open = "5.1.0"
@@ -47,6 +46,7 @@ strum = { version = "0.26.1", features = ["derive"] }
 strum_macros = "0.26.1"
 thiserror = "1.0.57"
 toml = { version = "0.8.10", features = ["indexmap", "preserve_order"] }
+tracing = { version = "0.1.40" }
 typed-builder = "0.18.1"
 ulid = { version = "1.1.2", features = ["serde"] }
 
