--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -52,6 +52,7 @@ ulid = { version = "1.1.2", features = ["serde"] }
 
 [dev-dependencies]
 insta = { version = "1.36.1", features = ["toml", "redactions"] }
+pace_testing = { workspace = true }
 rstest = "0.18.2"
 similar-asserts = { workspace = true }
 
