--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -27,7 +27,7 @@ clap = ["dep:clap"]
 # testing = ["dep:arbitrary"]
 
 [dependencies]
-chrono = { version = "0.4.35", features = ["serde"] }
+chrono = { workspace = true }
 clap = { workspace = true, optional = true }
 directories = "5.0.1"
 displaydoc = "0.2.4"
