--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -33,6 +33,7 @@ directories = "5.0.1"
 displaydoc = "0.2.4"
 enum_dispatch = "0.3.12"
 getset = "0.1.2"
+humantime = "2.1.0"
 itertools = "0.12.1"
 merge = "0.1.0"
 miette = { version = "7.1.0", features = ["fancy"] }
