--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -43,6 +43,7 @@ rayon = "1.9.0"
 rusqlite = { version = "0.31.0", features = ["bundled", "chrono", "uuid"], optional = true }
 serde = "1.0.197"
 serde_derive = "1.0.197"
+serde_json = "1.0.114"
 strum = { version = "0.26.1", features = ["derive"] }
 strum_macros = "0.26.1"
 thiserror = "1.0.57"
