--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -33,6 +33,7 @@ directories = "5.0.1"
 displaydoc = "0.2.4"
 enum_dispatch = "0.3.12"
 getset = "0.1.2"
+humantime = "2.1.0"
 itertools = "0.12.1"
 merge = "0.1.0"
 miette = { version = "7.1.0", features = ["fancy"] }
@@ -42,6 +43,7 @@ rayon = "1.9.0"
 rusqlite = { version = "0.31.0", features = ["bundled", "chrono", "uuid"], optional = true }
 serde = "1.0.197"
 serde_derive = "1.0.197"
+serde_json = "1.0.114"
 strum = { version = "0.26.1", features = ["derive"] }
 strum_macros = "0.26.1"
 thiserror = "1.0.57"
