--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -46,6 +46,7 @@ serde_derive = "1.0.197"
 serde_json = "1.0.114"
 strum = { version = "0.26.1", features = ["derive"] }
 strum_macros = "0.26.1"
+tabled = "0.15.0"
 thiserror = "1.0.57"
 toml = { version = "0.8.10", features = ["indexmap", "preserve_order"] }
 tracing = { version = "0.1.40" }
