--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -52,6 +52,7 @@ toml = { version = "0.8.10", features = ["indexmap", "preserve_order"] }
 tracing = { version = "0.1.40" }
 typed-builder = "0.18.1"
 ulid = { version = "1.1.2", features = ["serde"] }
+wildmatch = "2.3.0"
 
 [dev-dependencies]
 insta = { version = "1.36.1", features = ["toml", "redactions"] }
