--- a/Cargo.toml
+++ b/Cargo.toml
@@ -192,8 +192,8 @@ unused_parens = "warn"
 while_true = "warn"
 
 [workspace.lints.clippy]
-# pedantic = "warn"
-# nursery = "warn"
+pedantic = "warn"
+nursery = "warn"
 expect_used = "warn"
 unwrap_used = "warn"
 enum_glob_use = "warn"
